Adds local user folder's to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-2021-net-turma1/Pedro/.vs
-2021-net-turma1/Pedro/packages
-2021-net-turma1/Pedro/TreinamentoBitzen/bin
-2021-net-turma1/Pedro/TreinamentoBitzen/obj
-2021-net-turma1/Pedro/TreinamentoBitzen.Dados/bin
-2021-net-turma1/Pedro/TreinamentoBitzen.Dados/obj
-2021-net-turma1/Pedro/TreinamentoBitzen.RegrasNegocio/bin
-2021-net-turma1/Pedro/TreinamentoBitzen.RegrasNegocio/obj
+2021-net-turma1/*/.vs
+2021-net-turma1/*/packages
+2021-net-turma1/*/TreinamentoBitzen/bin
+2021-net-turma1/*/TreinamentoBitzen/obj
+2021-net-turma1/*/TreinamentoBitzen.Dados/bin
+2021-net-turma1/*/TreinamentoBitzen.Dados/obj
+2021-net-turma1/*/TreinamentoBitzen.RegrasNegocio/bin
+2021-net-turma1/*/TreinamentoBitzen.RegrasNegocio/obj
 
 *.csproj.user
 .vs
