--- a/2021-net-turma1/Djakson/TreinamentoBitzen/TreinamentoBitzen.csproj
+++ b/2021-net-turma1/Djakson/TreinamentoBitzen/TreinamentoBitzen.csproj
@@ -180,6 +180,7 @@
     <Content Include="Views\Manufacturer\Delete.cshtml" />
     <Content Include="Views\Vehicle\Index.cshtml" />
     <Content Include="Views\Vehicle\Create.cshtml" />
+    <Content Include="Views\Vehicle\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
