--- a/2021-net-turma1/Djakson/TreinamentoBitzen/TreinamentoBitzen.csproj
+++ b/2021-net-turma1/Djakson/TreinamentoBitzen/TreinamentoBitzen.csproj
@@ -182,6 +182,7 @@
     <Content Include="Views\Vehicle\Create.cshtml" />
     <Content Include="Views\Vehicle\Details.cshtml" />
     <Content Include="Views\Vehicle\Edit.cshtml" />
+    <Content Include="Views\Vehicle\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
