--- a/2021-net-turma1/Djakson/TreinamentoBitzen.RegrasNegocio/TreinamentoBitzen.RegrasNegocio.csproj
+++ b/2021-net-turma1/Djakson/TreinamentoBitzen.RegrasNegocio/TreinamentoBitzen.RegrasNegocio.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DriverService.cs" />
     <Compile Include="Services\ManufacturerService.cs" />
     <Compile Include="Services\VehicleService.cs" />
   </ItemGroup>
