--- a/2021-net-turma1/Djakson/TreinamentoBitzen/TreinamentoBitzen.csproj
+++ b/2021-net-turma1/Djakson/TreinamentoBitzen/TreinamentoBitzen.csproj
@@ -186,6 +186,8 @@
     <Content Include="Views\Vehicle\Edit.cshtml" />
     <Content Include="Views\Vehicle\Delete.cshtml" />
     <Content Include="Views\Driver\Index.cshtml" />
+    <Content Include="Views\Driver\Details.cshtml" />
+    <Content Include="Views\Driver\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
