--- a/2021-net-turma1/Djakson/TreinamentoBitzen/TreinamentoBitzen.csproj
+++ b/2021-net-turma1/Djakson/TreinamentoBitzen/TreinamentoBitzen.csproj
@@ -189,6 +189,7 @@
     <Content Include="Views\Driver\Details.cshtml" />
     <Content Include="Views\Driver\Create.cshtml" />
     <Content Include="Views\Driver\Edit.cshtml" />
+    <Content Include="Views\Driver\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
